use-cases/06-weighted-canary-routing/envoy.yaml
static_resources:
  listeners:
    - name: listener_http
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                internal_address_config: {}
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                            headers:
                              - name: x-canary
                                string_match: { exact: always }
                          route: { cluster: canary }
                        - match: { prefix: "/" }
                          route:
                            weighted_clusters:
                              clusters:
                                - { name: stable, weight: 80 }
                                - { name: canary, weight: 20 }
                            timeout: 5s
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: stable
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: stable
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: stable, port_value: 8080 }
    - name: canary
      connect_timeout: 1s
      type: STRICT_DNS
      load_assignment:
        cluster_name: canary
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: canary, port_value: 8080 }
admin:
  access_log:
    - name: envoy.access_loggers.file
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
